# xhec-mlops-project-student

./: .gitignore  .pre-commit-config.yaml  Dockerfile.app  PR_0.md  PR_1.md  PR_2.md  PR_3.md  PR_4.md  README.md  download_dataset.py  environment.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  test_hello_world.py
.github/workflows/: ci.yaml
notebooks/: eda.ipynb  modelling.ipynb
src/modelling/: config.py  helpers.py  main.py  modeling.py  preprocessing.py  training.py  utils.py  workflows.py
src/web_service/: app_config.py  main.py  utils.py
src/web_service/lib/: inference.py  models.py
src/web_service/local_objects/: encoder.pkl  model.pkl
