[tool.poetry]
name = "xhec-mlops-project-student"
version = "0.1.0"
description = ""
authors = ["Tim <timvalencony@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kagglehub = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
