[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
authors = [
  { name = "malo-renaudin", email = "malo.renaudin@hec.edu" },
  {name = "tim-vlc", email ="timvalencony@gmail.com"}
] # TODO: add authors here
description = "This repository contains the solution for the X-HEC MLOps Project on the industrialization of Abalone age prediction model."
version = "0.0.1"
readme = "README.md"
requires-python = ">3.10" # TODO: update this version

[project.urls]
"Homepage" = "https://github.com/tim-vlc/xhec-mlops-project-student" # TODO: update this URL

[tool.setuptools]
packages = ["src"]

# TODO: add black, isort, and ruff (optional - not needed if using flake8) configurations here
