[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
authors = [
  {name = "malo-renaudin", email = "malo.renaudin@hec.edu" },
  {name = "tim-vlc", email ="timvalencony@gmail.com"},
  {name = "LeopoldGuichot", email = "leopold.guichot@hec.edu"},
  {name = "SamiKalai", email = "Samikalai1999@gmail.com"}
]
description = "This repository contains the solution for the X-HEC MLOps Project on the industrialization of Abalone age prediction model."
version = "0.0.1"
readme = "README.md"
requires-python = ">3.12"

[project.urls]
"Homepage" = "https://github.com/tim-vlc/xhec-mlops-project-student"

[tool.setuptools]
packages = ["src"]